-
Bug
-
Resolution: Done
-
P2: Important
-
6.1.0 Beta3
-
None
-
-
aab39f5d5dc7d960715d5335a2427e89a6ce0f0d (qt/qtdeclarative/dev) 64c49fda4fb8eb757532bd777aaea36879ac3b72 (qt/qtdeclarative/6.1)
When trying to run the example, this happens:
C:/Qt/Tools/mingw810_64/bin/mingw32-make -f Makefile.Debug
mingw32-make[1]: Entering directory 'C:/Qt/Examples/Qt-6.1.0/quick/rendercontrol/build-rendercontrol_d3d11-Desktop_Qt_6_1_0_MinGW_64_bit-Debug'
g++ -c -fno-keep-inline-dllexport -g -std=gnu+1z -Wall -Wextra -Wextra -fexceptions -mthreads -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DQT_QML_DEBUG -DQT_QUICK_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_NEEDS_QMAIN -I../rendercontrol_d3d11 -I. -IC:/Qt/6.1.0/mingw81_64/include -IC:/Qt/6.1.0/mingw81_64/include/QtQuick -IC:/Qt/6.1.0/mingw81_64/include/QtOpenGL -IC:/Qt/6.1.0/mingw81_64/include/QtGui -IC:/Qt/6.1.0/mingw81_64/include/QtQmlModels -IC:/Qt/6.1.0/mingw81_64/include/QtQml -IC:/Qt/6.1.0/mingw81_64/include/QtNetwork -IC:/Qt/6.1.0/mingw81_64/include/QtCore -Idebug -IC:/VulkanSDK/1.0.51.0/Include -IC:/Qt/6.1.0/mingw81_64/mkspecs/win32-g+ -o debug/main.o ../rendercontrol_d3d11/main.cpp
g++ -c -fno-keep-inline-dllexport -g -std=gnu+1z -Wall -Wextra -Wextra -fexceptions -mthreads -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DQT_QML_DEBUG -DQT_QUICK_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_NEEDS_QMAIN -I../rendercontrol_d3d11 -I. -IC:/Qt/6.1.0/mingw81_64/include -IC:/Qt/6.1.0/mingw81_64/include/QtQuick -IC:/Qt/6.1.0/mingw81_64/include/QtOpenGL -IC:/Qt/6.1.0/mingw81_64/include/QtGui -IC:/Qt/6.1.0/mingw81_64/include/QtQmlModels -IC:/Qt/6.1.0/mingw81_64/include/QtQml -IC:/Qt/6.1.0/mingw81_64/include/QtNetwork -IC:/Qt/6.1.0/mingw81_64/include/QtCore -Idebug -IC:/VulkanSDK/1.0.51.0/Include -IC:/Qt/6.1.0/mingw81_64/mkspecs/win32-g+ -o debug/window.o ../rendercontrol_d3d11/window.cpp
g++ -c -fno-keep-inline-dllexport -g -std=gnu+1z -Wall -Wextra -Wextra -fexceptions -mthreads -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DQT_QML_DEBUG -DQT_QUICK_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_NEEDS_QMAIN -I../rendercontrol_d3d11 -I. -IC:/Qt/6.1.0/mingw81_64/include -IC:/Qt/6.1.0/mingw81_64/include/QtQuick -IC:/Qt/6.1.0/mingw81_64/include/QtOpenGL -IC:/Qt/6.1.0/mingw81_64/include/QtGui -IC:/Qt/6.1.0/mingw81_64/include/QtQmlModels -IC:/Qt/6.1.0/mingw81_64/include/QtQml -IC:/Qt/6.1.0/mingw81_64/include/QtNetwork -IC:/Qt/6.1.0/mingw81_64/include/QtCore -Idebug -IC:/VulkanSDK/1.0.51.0/Include -IC:/Qt/6.1.0/mingw81_64/mkspecs/win32-g+ -o debug/engine.o ../rendercontrol_d3d11/engine.cpp
'C:\Qt\6.1.0\mingw81_64\bin\rcc.exe' -name rendercontrol ../rendercontrol_d3d11/rendercontrol.qrc -o debug/qrc_rendercontrol.cpp
g++ -c -fno-keep-inline-dllexport -g -std=gnu+1z -Wall -Wextra -Wextra -fexceptions -mthreads -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DQT_QML_DEBUG -DQT_QUICK_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_NEEDS_QMAIN -I../rendercontrol_d3d11 -I. -IC:/Qt/6.1.0/mingw81_64/include -IC:/Qt/6.1.0/mingw81_64/include/QtQuick -IC:/Qt/6.1.0/mingw81_64/include/QtOpenGL -IC:/Qt/6.1.0/mingw81_64/include/QtGui -IC:/Qt/6.1.0/mingw81_64/include/QtQmlModels -IC:/Qt/6.1.0/mingw81_64/include/QtQml -IC:/Qt/6.1.0/mingw81_64/include/QtNetwork -IC:/Qt/6.1.0/mingw81_64/include/QtCore -Idebug -IC:/VulkanSDK/1.0.51.0/Include -IC:/Qt/6.1.0/mingw81_64/mkspecs/win32-g+ -o debug/qrc_rendercontrol.o debug/qrc_rendercontrol.cpp
g++ -Wl,-subsystem,windows -mthreads -o debug/rendercontrol_d3d11.exe debug/main.o debug/window.o debug/engine.o debug/qrc_rendercontrol.o -ld3d11 -ldxgi -ldxguid C:/Qt/6.1.0/mingw81_64/lib/libQt6Quick.a C:/Qt/6.1.0/mingw81_64/lib/libQt6OpenGL.a C:/Qt/6.1.0/mingw81_64/lib/libQt6Gui.a C:/Qt/6.1.0/mingw81_64/lib/libQt6QmlModels.a C:/Qt/6.1.0/mingw81_64/lib/libQt6Qml.a C:/Qt/6.1.0/mingw81_64/lib/libQt6Network.a C:/Qt/6.1.0/mingw81_64/lib/libQt6Core.a -lmingw32 C:/Qt/6.1.0/mingw81_64/lib/libQt6EntryPoint.a -lshell32
debug/engine.o:engine.cpp.rdata$.refptr.IID_ID3D11DeviceContext1[.refptr.IID_ID3D11DeviceContext1]+0x0): undefined reference to `IID_ID3D11DeviceContext1'
debug/engine.o:engine.cpp.rdata$.refptr.IID_IDXGIFactory2[.refptr.IID_IDXGIFactory2]+0x0): undefined reference to `IID_IDXGIFactory2'
collect2.exe: error: ld returned 1 exit status
mingw32-make[1]: *** [Makefile.Debug:76: debug/rendercontrol_d3d11.exe] Error 1
mingw32-make[1]: Leaving directory 'C:/Qt/Examples/Qt-6.1.0/quick/rendercontrol/build-rendercontrol_d3d11-Desktop_Qt_6_1_0_MinGW_64_bit-Debug'
mingw32-make: *** [Makefile:45: debug] Error 2
12:07:48: The process "C:\Qt\Tools\mingw810_64\bin\mingw32-make.exe" exited with code 2.
Error while building/deploying project rendercontrol_d3d11 (kit: Desktop Qt 6.1.0 MinGW 64-bit)
When executing step "Make"
12:07:48: Elapsed time: 00:12.
For Gerrit Dashboard: QTBUG-92839 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
348243,3 | Enable rendercontrol_d3d11 example for MinGW | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
349815,2 | Enable rendercontrol_d3d11 example for MinGW | 6.1 | qt/qtdeclarative | Status: MERGED | +2 | 0 |