examples/quick/rendercontrol/rendercontrol.pro
@@ -3,7 +3,7 @@ TEMPLATE = subdirs
 SUBDIRS += \
     rendercontrol_opengl
 
-win32:!mingw {
+win32 {
     SUBDIRS += \
         rendercontrol_d3d11
 }
