examples/quick/rendercontrol/rendercontrol_d3d11/rendercontrol_d3d11.pro
@@ -13,7 +13,7 @@ HEADERS += \
 
 RESOURCES += rendercontrol.qrc
 
-LIBS += -ld3d11 -ldxgi -ldxguid
+LIBS += -ld3d11 -ldxgi -ldxguid -luuid
 
 target.path = $$[QT_INSTALL_EXAMPLES]/quick/rendercontrol/rendercontrol_d3d11
 INSTALLS += target
